--- a/share.html
+++ b/share.html
@@ -159,7 +159,7 @@
               "action": {
                 "type": "uri",
                 "label": "แชร์อีกครั้ง",
-                "uri": "https://liff.line.me/2006390864-5gQqgRvw"
+                "uri": "https://liff.line.me/2007236505-N3aoxxJp"
               },
               "size": "full"
             }
@@ -169,8 +169,8 @@
       }
     };
 
-    // ใส่ LIFF ID ของคุณในนี้
-    const LIFF_ID = "YOUR_LIFF_ID";
+    // กำหนด LIFF ID จากที่คุณให้มา
+    const LIFF_ID = "2007236505-N3aoxxJp";
 
     liff.init({ liffId: LIFF_ID }).then(() => {
       if (!liff.isLoggedIn()) {
