--- a/share.html
+++ b/share.html
@@ -11,7 +11,7 @@
   <script>
     const flexMessage = {
       type: "flex",
-      altText: "📚 แชร์แนะนำการใช้งาน eLibrary",
+      altText: "📚 สงกรานต์ไม่ไปไหนอ่านหนังสือกันได้นะครับ",
       contents: {
         "type": "bubble",
         "size": "giga",
@@ -115,7 +115,7 @@
                   "action": {
                     "type": "uri",
                     "label": "action",
-                    "uri": "https://youtu.be/4JAH4OQVOeo"
+                    "uri": "https://youtu.be/IvK6mPjei5c"
                   },
                   "align": "center"
                 },
