--- a/share.html
+++ b/share.html
@@ -11,7 +11,7 @@
   <script>
     const flexMessage = {
       type: "flex",
-      altText: "📚 สงกรานต์ไม่ไปไหนอ่านหนังสือกันได้นะครับ",
+      altText: "📚อ่านหนังสือออนไลน์ได้แล้ววันนี้...ห้องสมุดขออนุญาต ประชาสัมพันธ์การใช้งาน E-Book",
       contents: {
         "type": "bubble",
         "size": "giga",
