--- a/share.html
+++ b/share.html
@@ -3,221 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <title>แชร์ Flex Message</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
-  <h2>กำลังเตรียมแชร์ข้อความ...</h2>
+  <h2 id="status">กำลังเตรียมแชร์ข้อความ...</h2>
 
   <script>
+    const LIFF_ID = "2007236505-N3aoxxJp";
+    document.getElementById("status").innerText = "🔄 กำลังโหลด LIFF...";
+
     const flexMessage = {
       type: "flex",
       altText: "📚 ห้องสมุดขออนุญาต ประชาสัมพันธ์การใช้งาน E-Book",
       contents: {
-  "type": "bubble",
-  "size": "giga",
-  "header": {
-    "type": "box",
-    "layout": "vertical",
-    "contents": [
-      {
-        "type": "image",
-        "url": "https://img2.pic.in.th/pic/head5.png",
-        "aspectRatio": "7:1",
-        "align": "center",
-        "gravity": "center",
-        "aspectMode": "cover",
-        "size": "full"
-      }
-    ],
-    "paddingAll": "none"
-  },
-  "hero": {
-    "type": "box",
-    "layout": "vertical",
-    "contents": [
-      {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [
-          {
-            "type": "image",
-            "url": "https://img5.pic.in.th/file/secure-sv1/w13b16683eb845d5ce.png",
-            "aspectRatio": "129:79",
-            "aspectMode": "fit",
-            "backgroundColor": "#b3baff",
-            "size": "100%",
-            "action": {
-              "type": "uri",
-              "label": "อ่านเลย",
-              "uri": "https://elibrary-afapslib.cu-elibrary.com/"
-            }
-          },
-          {
-            "type": "box",
-            "layout": "horizontal",
-            "contents": [
-              {
-                "type": "image",
-                "url": "https://img2.pic.in.th/pic/-643-x-80-px.png",
-                "action": {
-                  "type": "uri",
-                  "label": "action",
-                  "uri": "https://sites.google.com/view/libraryafaps"
-                },
-                "aspectRatio": "8:1",
-                "margin": "none",
-                "aspectMode": "fit",
-                "size": "full"
-              },
-              {
-                "type": "separator"
-              },
-              {
-                "type": "image",
-                "url": "https://img5.pic.in.th/file/secure-sv1/-643-x-80-px-1.png",
-                "aspectRatio": "8:1",
-                "action": {
-                  "type": "uri",
-                  "label": "action",
-                  "uri": "https://liff.line.me/2007236505-N3aoxxJp"
-                },
-                "align": "center",
-                "size": "full"
-              }
-            ],
-            "justifyContent": "center"
-          }
-        ],
-        "backgroundColor": "#b3baff",
-        "paddingAll": "none",
-        "borderColor": "#b3baff",
-        "borderWidth": "none"
-      }
-    ],
-    "backgroundColor": "#b3baff",
-    "borderWidth": "none",
-    "action": {
-      "type": "uri",
-      "label": "action",
-      "uri": "https://elibrary-afapslib.cu-elibrary.com/"
-    },
-    "maxHeight": "100%"
-  },
-  "body": {
-    "type": "box",
-    "layout": "vertical",
-    "contents": [
-      {
-        "type": "box",
-        "layout": "horizontal",
-        "contents": [
-          {
-            "type": "image",
-            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/appstore.png",
-            "size": "md",
-            "action": {
-              "type": "uri",
-              "label": "action",
-              "uri": "https://apps.apple.com/th/app/cu-e-library/id1607050195?l=th"
-            },
-            "align": "center",
-            "aspectRatio": "9:3"
-          },
-          {
-            "type": "separator"
-          },
-          {
-            "type": "image",
-            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/manual.png",
-            "size": "md",
-            "aspectRatio": "9:3",
-            "action": {
-              "type": "uri",
-              "label": "action",
-              "uri": "https://youtu.be/7We_KwOb1lw"
-            },
-            "align": "center"
-          },
-          {
-            "type": "separator"
-          },
-          {
-            "type": "image",
-            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/googleplay.png",
-            "size": "md",
-            "aspectRatio": "9:3",
-            "action": {
-              "type": "uri",
-              "label": "action",
-              "uri": "https://play.google.com/store/apps/details?id=hti.cu.elibrary.android&pcampaignid=web_share"
-            },
-            "align": "center"
-          }
-        ],
-        "justifyContent": "center",
-        "offsetBottom": "xs"
-      }
-    ],
-    "background": {
-      "type": "linearGradient",
-      "startColor": "#5656c7",
-      "endColor": "#b3baff",
-      "angle": "0deg"
-    }
-  },
-  "footer": {
-    "type": "box",
-    "layout": "vertical",
-    "contents": [
-      {
-        "type": "image",
-        "url": "https://img5.pic.in.th/file/secure-sv1/footer2.jpg",
-        "align": "center",
-        "gravity": "center",
-        "aspectMode": "cover",
-        "aspectRatio": "1080:50",
-        "offsetTop": "0px",
-        "action": {
-          "type": "uri",
-          "label": "shared",
-          "uri": "https://liff.line.me/2007236505-N3aoxxJp"
+        type: "bubble",
+        hero: {
+          type: "image",
+          url: "https://img2.pic.in.th/pic/head5.png",
+          size: "full",
+          aspectRatio: "16:9",
+          aspectMode: "cover"
         },
-        "size": "full"
+        body: {
+          type: "box",
+          layout: "vertical",
+          contents: [
+            {
+              type: "text",
+              text: "กดเพื่ออ่านหนังสือ E-Book ได้เลย 📖",
+              wrap: true
+            }
+          ]
+        },
+        footer: {
+          type: "box",
+          layout: "vertical",
+          contents: [
+            {
+              type: "button",
+              action: {
+                type: "uri",
+                label: "เข้าเว็บไซต์",
+                uri: "https://elibrary-afapslib.cu-elibrary.com/"
+              },
+              style: "primary"
+            }
+          ]
+        }
       }
-    ],
-    "paddingAll": "none",
-    "offsetTop": "none",
-    "offsetBottom": "none",
-    "paddingTop": "none",
-    "paddingStart": "none",
-    "paddingEnd": "none",
-    "paddingBottom": "none",
-    "offsetEnd": "none",
-    "offsetStart": "none",
-    "cornerRadius": "none",
-    "borderWidth": "none",
-    "spacing": "md"
-  }
-};
-
-    // กำหนด LIFF ID จากที่คุณให้มา
-    const LIFF_ID = "2007236505-N3aoxxJp";
+    };
 
     liff.init({ liffId: LIFF_ID }).then(() => {
       if (!liff.isLoggedIn()) {
         liff.login();
-      } else {
-        liff.shareTargetPicker([flexMessage])
-          .then(() => {
-            alert("✅ แชร์สำเร็จแล้ว!");
-            liff.closeWindow();
-          })
-          .catch((err) => {
-            alert("❌ แชร์ไม่สำเร็จ: " + err.message);
-            console.error(err);
-          });
+        return;
       }
-    });
-  </script>
-</body>
-</html>
+
+      if (!liff.isInClient()) {
+        document.getElementById("status").inner
