--- a/share.html
+++ b/share.html
@@ -1,99 +1,223 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>แชร์ Flex Message</title>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 2rem;
-    }
-    #status {
-      font-size: 1.2rem;
-      margin-top: 2rem;
-    }
-  </style>
 </head>
 <body>
-  <h2>📤 กำลังเตรียมแชร์ข้อความ...</h2>
-  <div id="status">กรุณารอสักครู่</div>
+  <h2>กำลังเตรียมแชร์ข้อความ...</h2>
 
   <script>
-    const LIFF_ID = "2007236505-N3aoxxJp";
-
     const flexMessage = {
       type: "flex",
-      altText: "📚 ห้องสมุดขออนุญาตประชาสัมพันธ์การใช้งาน E-Book",
+      altText: "📚 ห้องสมุดขออนุญาต ประชาสัมพันธ์การใช้งาน E-Book",
       contents: {
-        type: "bubble",
-        body: {
-          type: "box",
-          layout: "vertical",
-          contents: [
-            {
-              type: "text",
-              text: "✅ ลิงก์ E-Book สำหรับนักเรียน",
-              size: "lg",
-              weight: "bold",
-              wrap: true
-            },
-            {
-              type: "button",
-              action: {
-                type: "uri",
-                label: "📖 อ่านเลย",
-                uri: "https://elibrary-afapslib.cu-elibrary.com/"
-              },
-              style: "primary",
-              margin: "md"
-            },
-            {
-              type: "button",
-              action: {
-                type: "uri",
-                label: "🔁 แชร์ต่อ",
-                uri: "https://liff.line.me/2007236505-N3aoxxJp"
-              },
-              style: "secondary",
-              margin: "sm"
+  "type": "bubble",
+  "size": "giga",
+  "header": {
+    "type": "box",
+    "layout": "vertical",
+    "contents": [
+      {
+        "type": "image",
+        "url": "https://img2.pic.in.th/pic/head5.png",
+        "aspectRatio": "7:1",
+        "align": "center",
+        "gravity": "center",
+        "aspectMode": "cover",
+        "size": "full"
+      }
+    ],
+    "paddingAll": "none"
+  },
+  "hero": {
+    "type": "box",
+    "layout": "vertical",
+    "contents": [
+      {
+        "type": "box",
+        "layout": "vertical",
+        "contents": [
+          {
+            "type": "image",
+            "url": "https://img5.pic.in.th/file/secure-sv1/w13b16683eb845d5ce.png",
+            "aspectRatio": "129:79",
+            "aspectMode": "fit",
+            "backgroundColor": "#b3baff",
+            "size": "100%",
+            "action": {
+              "type": "uri",
+              "label": "อ่านเลย",
+              "uri": "https://elibrary-afapslib.cu-elibrary.com/"
             }
-          ]
-        }
+          },
+          {
+            "type": "box",
+            "layout": "horizontal",
+            "contents": [
+              {
+                "type": "image",
+                "url": "https://img2.pic.in.th/pic/-643-x-80-px.png",
+                "action": {
+                  "type": "uri",
+                  "label": "action",
+                  "uri": "https://sites.google.com/view/libraryafaps"
+                },
+                "aspectRatio": "8:1",
+                "margin": "none",
+                "aspectMode": "fit",
+                "size": "full"
+              },
+              {
+                "type": "separator"
+              },
+              {
+                "type": "image",
+                "url": "https://img5.pic.in.th/file/secure-sv1/-643-x-80-px-1.png",
+                "aspectRatio": "8:1",
+                "action": {
+                  "type": "uri",
+                  "label": "action",
+                  "uri": "https://liff.line.me/2007236505-N3aoxxJp"
+                },
+                "align": "center",
+                "size": "full"
+              }
+            ],
+            "justifyContent": "center"
+          }
+        ],
+        "backgroundColor": "#b3baff",
+        "paddingAll": "none",
+        "borderColor": "#b3baff",
+        "borderWidth": "none"
       }
-    };
-
-    async function main() {
-      try {
-        await liff.init({ liffId: LIFF_ID });
-        console.log("✅ LIFF init success");
-
-        if (!liff.isLoggedIn()) {
-          document.getElementById("status").innerText = "🔐 ยังไม่ล็อกอิน... กำลังเข้าสู่ระบบ";
-          liff.login();
-          return;
-        }
-
-        if (!liff.isInClient()) {
-          document.getElementById("status").innerText = "⚠️ กรุณาเปิดลิงก์นี้จากในแอป LINE เท่านั้น";
-          return;
-        }
-
-        document.getElementById("status").innerText = "📤 กำลังแชร์...";
-
-        await liff.shareTargetPicker([flexMessage]);
-
-        document.getElementById("status").innerText = "✅ แชร์สำเร็จแล้ว!";
-        setTimeout(() => liff.closeWindow(), 1500);
-      } catch (err) {
-        console.error("❌ Error:", err);
-        document.getElementById("status").innerText = "❌ แชร์ไม่สำเร็จ: " + err.message;
+    ],
+    "backgroundColor": "#b3baff",
+    "borderWidth": "none",
+    "action": {
+      "type": "uri",
+      "label": "action",
+      "uri": "https://elibrary-afapslib.cu-elibrary.com/"
+    },
+    "maxHeight": "100%"
+  },
+  "body": {
+    "type": "box",
+    "layout": "vertical",
+    "contents": [
+      {
+        "type": "box",
+        "layout": "horizontal",
+        "contents": [
+          {
+            "type": "image",
+            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/appstore.png",
+            "size": "md",
+            "action": {
+              "type": "uri",
+              "label": "action",
+              "uri": "https://apps.apple.com/th/app/cu-e-library/id1607050195?l=th"
+            },
+            "align": "center",
+            "aspectRatio": "9:3"
+          },
+          {
+            "type": "separator"
+          },
+          {
+            "type": "image",
+            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/manual.png",
+            "size": "md",
+            "aspectRatio": "9:3",
+            "action": {
+              "type": "uri",
+              "label": "action",
+              "uri": "https://youtu.be/7We_KwOb1lw"
+            },
+            "align": "center"
+          },
+          {
+            "type": "separator"
+          },
+          {
+            "type": "image",
+            "url": "https://www.afaps.ac.th/subdomain/sed/gallery/picfram/googleplay.png",
+            "size": "md",
+            "aspectRatio": "9:3",
+            "action": {
+              "type": "uri",
+              "label": "action",
+              "uri": "https://play.google.com/store/apps/details?id=hti.cu.elibrary.android&pcampaignid=web_share"
+            },
+            "align": "center"
+          }
+        ],
+        "justifyContent": "center",
+        "offsetBottom": "xs"
       }
+    ],
+    "background": {
+      "type": "linearGradient",
+      "startColor": "#5656c7",
+      "endColor": "#b3baff",
+      "angle": "0deg"
     }
+  },
+  "footer": {
+    "type": "box",
+    "layout": "vertical",
+    "contents": [
+      {
+        "type": "image",
+        "url": "https://img5.pic.in.th/file/secure-sv1/footer2.jpg",
+        "align": "center",
+        "gravity": "center",
+        "aspectMode": "cover",
+        "aspectRatio": "1080:50",
+        "offsetTop": "0px",
+        "action": {
+          "type": "uri",
+          "label": "shared",
+          "uri": "https://liff.line.me/2007236505-N3aoxxJp"
+        },
+        "size": "full"
+      }
+    ],
+    "paddingAll": "none",
+    "offsetTop": "none",
+    "offsetBottom": "none",
+    "paddingTop": "none",
+    "paddingStart": "none",
+    "paddingEnd": "none",
+    "paddingBottom": "none",
+    "offsetEnd": "none",
+    "offsetStart": "none",
+    "cornerRadius": "none",
+    "borderWidth": "none",
+    "spacing": "md"
+  }
+};
 
-    main();
+    // กำหนด LIFF ID จากที่คุณให้มา
+    const LIFF_ID = "2007236505-N3aoxxJp";
+
+    liff.init({ liffId: LIFF_ID }).then(() => {
+      if (!liff.isLoggedIn()) {
+        liff.login();
+      } else {
+        liff.shareTargetPicker([flexMessage])
+          .then(() => {
+            alert("✅ แชร์สำเร็จแล้ว!");
+            liff.closeWindow();
+          })
+          .catch((err) => {
+            alert("❌ แชร์ไม่สำเร็จ: " + err.message);
+            console.error(err);
+          });
+      }
+    });
   </script>
 </body>
 </html>
