--- a/share.html
+++ b/share.html
@@ -82,7 +82,7 @@
         "contents": [
           {
             "type": "image",
-            "url": "https://img5.pic.in.th/file/secure-sv1/w13b16683eb845d5ce.png",
+            "url": "https://img5.pic.in.th/file/secure-sv1/E-BOOK-12.gif",
             "aspectRatio": "129:79",
             "aspectMode": "fit",
             "backgroundColor": "#b3baff",
